# Todo-Django

./: .env  README.md  manage.py  pyproject.toml
Backend/: .env.example  README.md  pyproject.toml
Backend/project_struct/: settings.py  urls.py  utils.py  wsgi.py
Backend/todo/: models.py  serializers.py  urls.py  views.py
Backend/todo/migrations/: 0001_initial.py  0002_alter_todos_created_on.py  0003_todos_updated_on.py
Backend/user/: models.py  serializers.py  urls.py  views.py
Backend/user/migrations/: 0001_initial.py  0002_alter_users_email.py  0003_users_phone.py  0004_users_is_active_users_last_logged_in.py  0005_alter_users_last_logged_in.py
project_struct/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
todo/: models.py  serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_alter_todos_created_on.py
todos/: .env.example  package-lock.json  package.json  vue.config.js
todos/src/: App.vue
todos/src/components/: Navbar.vue  TodoComponents.vue  index.js
todos/src/router/: index.js
todos/src/store/: index.js
todos/src/views/: 404NotFound.vue  LoginView.vue  ProfileView.vue  RegisterView.vue  TodoView.vue
user/: models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_users_email.py
